--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,19 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
+title: 一瓶论语 | A Bottle of Lún Yǔ
 
-# Site settings
-title: Coming soon...
 email: abolybook@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+
+description: >
+  开源《论语》读本，传统内涵，现代价值
+
+url: "http://abolybook.org"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://abolybook.org" # the base hostname & protocol for your site
-github_username:  abolybook
+
+github_username: abolybook
+
+github_project: aboly
 
 # Build settings
 markdown: kramdown
+
+gems:
+  - jemoji
